Move to semver and remove lots of lint warnings and uncheckeds

--- a/pom.xml
+++ b/pom.xml
@@ -204,6 +204,17 @@
           <warSourceDirectory>${project.build.directory}/external-resources</warSourceDirectory>
         </configuration>
       </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.1</version>
+        <configuration>
+          <compilerArgs>
+            <arg>-Xlint:all</arg>
+          </compilerArgs>
+        </configuration>
+      </plugin>
     </plugins>
 
   </build>
