--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,11 @@
       <artifactId>jackson-annotations</artifactId>
       <version>2.10.3</version>
     </dependency>
+    <dependency> <!-- required by docker-java -->
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>19.0</version>
+    </dependency>
   </dependencies>
 
 
