--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
     <connection>scm:git:git://github.com/jenkinsci/${project.artifactId}-plugin.git</connection>
     <developerConnection>scm:git:git@github.com:jenkinsci/${project.artifactId}-plugin.git</developerConnection>
     <url>http://github.com/jenkinsci/${project.artifactId}-plugin</url>
-    <tag>sysdig-secure-1.0.20.1</tag>
+    <tag>${project.artifactId}-${project.version}</tag>
   </scm>
   <repositories>
     <repository>
