Refactor, and add proxy tests for InlineScanner

--- a/pom.xml
+++ b/pom.xml
@@ -112,8 +112,13 @@
       <artifactId>mockito-core</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.github.stefanbirkner</groupId>
+      <artifactId>system-lambda</artifactId>
+      <version>1.1.1</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
-
 
   <build>
     <plugins>
