--- a/pom.xml
+++ b/pom.xml
@@ -169,6 +169,12 @@
       <artifactId>pipeline-model-definition</artifactId>
       <version>1.2</version>
     </dependency>
+    <dependency>
+      <groupId>com.github.stefanbirkner</groupId>
+      <artifactId>system-lambda</artifactId>
+      <version>1.2.0</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <dependencyManagement>
