--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   </parent>
 
   <artifactId>sysdig-secure</artifactId>
-  <version>2.1.9-SNAPSHOT</version>
+  <version>2.1.9-jenkins_2.89_compat-2</version>
   <packaging>hpi</packaging>
   <name>Sysdig Secure Container Image Scanner Plugin</name>
   <description>Integrates Jenkins with the Sysdig Secure Image Scanner to scan OCI images</description>
@@ -65,7 +65,7 @@
     <dependency>
       <groupId>org.jenkins-ci.plugins</groupId>
       <artifactId>apache-httpcomponents-client-4-api</artifactId>
-      <version>4.5.12-1.0</version>
+      <version>4.5.5-3.0</version>
     </dependency>
     <dependency>
       <groupId>com.github.docker-java</groupId>
@@ -95,7 +95,7 @@
     <dependency>
       <groupId>org.jenkins-ci.plugins</groupId>
       <artifactId>jackson2-api</artifactId>
-      <version>2.9.9.1</version>
+      <version>2.8.10.1</version>
     </dependency>
     <dependency> <!-- required by docker-java -->
       <groupId>com.google.guava</groupId>
@@ -191,6 +191,16 @@
         <groupId>org.jenkins-ci.plugins</groupId>
         <artifactId>structs</artifactId>
         <version>1.9</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.httpcomponents</groupId>
+        <artifactId>httpclient</artifactId>
+        <version>4.5.12</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.httpcomponents</groupId>
+        <artifactId>httpcore</artifactId>
+        <version>4.4.13</version>
       </dependency>
       <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
