--- a/pom.xml
+++ b/pom.xml
@@ -70,12 +70,12 @@
     <dependency>
       <groupId>com.github.docker-java</groupId>
       <artifactId>docker-java</artifactId>
-      <version>3.2.12</version>
+      <version>3.2.13</version>
     </dependency>
     <dependency>
       <groupId>com.github.docker-java</groupId>
       <artifactId>docker-java-transport-httpclient5</artifactId>
-      <version>3.2.12</version>
+      <version>3.2.13</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
@@ -194,7 +194,7 @@
       <dependency>
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-lang3</artifactId>
-        <version>3.9</version>
+        <version>3.12.0</version>
         <scope>test</scope>
       </dependency>
       <dependency>
@@ -294,6 +294,7 @@
         <artifactId>maven-hpi-plugin</artifactId>
         <configuration>
           <minimumJavaVersion>1.8</minimumJavaVersion>
+          <pluginFirstClassLoader>false</pluginFirstClassLoader>
           <webResources>
             <webResource>
               <directory>${project.build.directory}/external-resources</directory>
