--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,11 @@
       <artifactId>guava</artifactId>
       <version>19.0</version>
     </dependency>
+    <dependency> <!-- required by docker-java-core -->
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.12.0</version>
+    </dependency>
     <dependency> <!-- required by docker-java-transport-httpclient5 -->
       <groupId>commons-codec</groupId>
       <artifactId>commons-codec</artifactId>
@@ -195,7 +200,6 @@
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-lang3</artifactId>
         <version>3.12.0</version>
-        <scope>test</scope>
       </dependency>
       <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
