--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
     <version>3.57</version>
-    <relativePath />
+    <relativePath/>
   </parent>
 
   <artifactId>sysdig-secure</artifactId>
@@ -59,7 +60,7 @@
   <dependencies>
     <!-->This dependency could be updated to the latest version (before the incremental process): 2.6.2
     In order to do so, 'structs' dependency needs to be updated as well to at least 1.23, which requires
-    Jenkins to be at least at version 2.222<!-->
+    Jenkins to be at least at version 2.222<-->
     <dependency>
       <groupId>org.jenkins-ci.plugins</groupId>
       <artifactId>credentials</artifactId>
@@ -101,14 +102,16 @@
       <version>2.10.3</version>
     </dependency>
     <dependency>
-      <groupId>org.mockito</groupId>
-      <artifactId>mockito-core</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
       <groupId>org.jenkins-ci.plugins.workflow</groupId>
       <artifactId>workflow-step-api</artifactId>
       <version>2.20</version>
+    </dependency>
+
+    <!--TEST Dependencies-->
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.jenkins-ci.plugins.workflow</groupId>
@@ -171,8 +174,10 @@
       <dependency>
         <groupId>org.jenkins-ci.plugins</groupId>
         <artifactId>structs</artifactId>
-        <version>1.21</version> <!-->This is the most-updated version supporting Jenkins 1.150.1<!-->
+        <version>1.21</version> <!-->This is the most-updated version supporting Jenkins 1.150.1<-->
       </dependency>
+
+      <!--TEST Dependencies-->
       <dependency>
         <groupId>org.jenkins-ci.plugins</groupId>
         <artifactId>script-security</artifactId>
@@ -190,7 +195,6 @@
 
   <build>
     <plugins>
-
       <!-- download external resources like jQuery, jQuery UI, datatable etc. via webjars -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
