--- a/pom.xml
+++ b/pom.xml
@@ -300,6 +300,8 @@
           <compilerArgs>
             <arg>-Xlint:all</arg>
           </compilerArgs>
+          <source>9</source>
+          <target>9</target>
         </configuration>
       </plugin>
     </plugins>
