fixed default values also pr review

--- a/src/main/resources/com/sysdig/jenkins/plugins/sysdig/SysdigIaCScanBuilder/config.properties
+++ b/src/main/resources/com/sysdig/jenkins/plugins/sysdig/SysdigIaCScanBuilder/config.properties
@@ -1,4 +1,5 @@
 ListUnsupported=list-unsupported-resources
 ListUnsupportedDescr=Toggle output of detailed list of unsupported resources
-sysdigEnv=Sysdig Secure Engine URL
+SysdigEnv=Sysdig Secure Engine URL
 IsRecursive = Recursive
+SecureAPIToken = Secure API Token
